# step-tracker-2026

./: .env.example  .gitignore  CLAUDE.md  CNAME  R2_SETUP.md  README.md  README_R2.md  config.js  index.html  package-lock.json  package.json  pyproject.toml  robots.txt  setup-pi.sh  step-tracker.service  step-tracker.timer  steps_data.json  update_steps.py  vitest.config.js
.github/workflows/: ci.yml  deploy.yml
scripts/: bottomSheet.js  dataLoader.js  heatmap.js  main.js  popover.js  sidePanel.js  statPanelContent.js  stats.js  tooltips.js  utils.js
scripts/__tests__/: dataLoader.test.js  statPanelContent.test.js  stats.test.js  utils.test.js
styles/: main.css
tests/: test_integration.py  test_update_steps.py
worker/: README.md  index.js  package.json  wrangler.toml
